@@ -10,7 +10,7 @@
       <property name="description" i18n:translate=""></property>
       <property name="url_expr">string:${object_url}/@@manage-coordinates</property>
       <property name="icon_expr"></property>
-      <property name="available_expr">python:object.restrictedTraverse('@@geoview').showCoordinatesTab()</property>
+      <property name="available_expr">python:object.restrictedTraverse('@@contentlocations_helper').showCoordinatesTab()</property>
       <property name="permissions">
         <element value="Modify portal content"/>
       </property>
